# lm-cloud-sync

./: .env.example  .gitignore  CHANGELOG.md  README.md  pyproject.toml
docs/: cli-guide.md  gcp-spec.md  lm-cloud-sync-v2-spec.md  publishing.md
src/lm_cloud_sync/: __init__.py
src/lm_cloud_sync/cli/: __init__.py  aws.py  azure.py  gcp.py  helpers.py  main.py
src/lm_cloud_sync/core/: __init__.py  config.py  exceptions.py  lm_client.py  models.py  resync.py
src/lm_cloud_sync/providers/: __init__.py  base.py
src/lm_cloud_sync/providers/aws/: __init__.py  auth.py  discovery.py  groups.py  provider.py
src/lm_cloud_sync/providers/azure/: __init__.py  discovery.py  groups.py  provider.py
src/lm_cloud_sync/providers/gcp/: __init__.py  discovery.py  groups.py  provider.py
terraform/: README.md
terraform/examples/aws-only/: main.tf  variables.tf
terraform/examples/azure-only/: main.tf  terraform.tfvars.example  variables.tf
terraform/examples/gcp-only/: main.tf  projects.yaml.example  terraform.tfvars.example  variables.tf
terraform/modules/aws/: locals.tf  main.tf  outputs.tf  variables.tf
terraform/modules/aws/scripts/: create_integration.py  delete_integration.py
terraform/modules/azure/: README.md  locals.tf  main.tf  outputs.tf  variables.tf
terraform/modules/azure/scripts/: export-credentials.sh
terraform/modules/gcp/: locals.tf  main.tf  outputs.tf  variables.tf
terraform/modules/gcp/scripts/: create_integration.py  delete_integration.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py
tests/unit/: __init__.py  test_aws_auth.py  test_aws_discovery.py  test_aws_groups.py  test_azure_discovery.py  test_azure_groups.py  test_cli.py  test_config.py  test_gcp_groups.py  test_lm_client.py  test_models.py  test_resync.py  test_silent_failures.py
